Realizado la conexión con la base de datos en el AppCOntext

--- a/FinanzasMiHogar.App.Persistencia/FinanzasMiHogar.App.Persistencia.csproj
+++ b/FinanzasMiHogar.App.Persistencia/FinanzasMiHogar.App.Persistencia.csproj
@@ -17,4 +17,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\FinanzasMiHogar.App.Dominio\FinanzasMiHogar.App.Dominio.csproj" />
+  </ItemGroup>
+
 </Project>
