--- a/FinanzasMiHogar.App.Consola/FinanzasMiHogar.App.Consola.csproj
+++ b/FinanzasMiHogar.App.Consola/FinanzasMiHogar.App.Consola.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\FinanzasMiHogar.App.Persistencia\FinanzasMiHogar.App.Persistencia.csproj" />
+    <ProjectReference Include="..\FinanzasMiHogar.App.Dominio\FinanzasMiHogar.App.Dominio.csproj" />
   </ItemGroup>
 
 </Project>
